2009-08-16  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_keybindings.c: Basic keybinding support

2009-08-15  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_parser.c: Fix the offset property of LRC parser.

	* src/ol_config_property.h: Add `line-count' property to support single line mode

	* src/ol_osd_module.c: Support single line mode

	* src/ol_osd_render.c: Add function to return font height

	* src/ol_osd_window.c: Set height according to the font and line count

2009-08-14  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: Save OSD window position when moved

	* src/ol_osd_window.c: Add `moved' signal

	* src/ol_menu.c: Add Hide menu item and its hotkey

	* src/ol_osd_window.c: Make lyrics semi-transparent when mouse is over

2009-08-05  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_config.c: Implements config of string list

	* src/ol_osd_module.c: Handles config of active/inactive colors

	* src/ol_main.c: Replace `/' of artits and title of lrc file name to `_' to avoid download faild

	* src/ol_option.c: Active/inactive lrc color setting is available now

2009-08-04  Tiger Soldier  <tigersoldi@gmail.com>

	* po/LINGUAS: Add translation for French, Russian, and Spanish

	* src/ol_main.c: Ensure lyric directory when launched
	
	* src/ol_lrc_fetch_sogou.c: save temp files to /tmp
	Close and remove temp files when fetch failed

	* src/ol_option.c: Preview apprearence of lyrics

2009-08-02  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_about.c (ol_about_response): Handles the close button of about dialog

2009-07-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c : Add handler when composited is changed
	Display the lyrics without composited window manager in a proper way

2009-07-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_music_info.h: Add utility functions for OlMusicInfo

	* src/ol_osd_module.c, src/ol_main.c: Extract OSD Module from ol_main.c

	* src/ol_trayicon.c: Remove OSD Window dependency
