@@ -1,5 +1,9 @@
 2009-08-16  Tiger Soldier  <tigersoldi@gmail.com>
 
+	* src/ol_osd_module.c: Add visible support
+
+	* src/ol_osd_window.c: Fix bug that crashes when setting width before realized
+
 	* src/ol_keybindings.c: Basic keybinding support
 
 2009-08-15  Tiger Soldier  <tigersoldi@gmail.com>
